sample-applications/vehicle-dealership-sample-app/eks/k8s-nginx-ingress/namespace.yaml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
