sample-applications/vehicle-dealership-sample-app/eks/k8s-nginx-ingress/nginx-alb.yaml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    prometheus.io/port: '9113'
    prometheus.io/scrape: 'true'
    prometheus.io/scheme: http
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 32080
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    nodePort: 32081
    protocol: TCP
  selector:
    app: ingress-nginx
