sample-applications/vehicle-dealership-sample-app/eks/k8s-nginx-ingress/python-nginx-ingress.yaml
# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vehicle-inventory-backend
            port:
              number: 8001
      - path: /images
        pathType: Prefix
        backend:
          service:
            name: image-backend
            port:
              number: 8000
